fix: HTTP interception stack overflow + migrate to Gradle 9.1
HTTP Interception:
- Replace SPI (URLStreamHandlerProvider) with URLStreamHandlerFactory
- Use direct reflection to instantiate JDK internal HTTP/HTTPS connections
- No more infinite recursion on URL.openConnection()
- Add --add-opens JVM flags for Java 9+ module access

Gradle Migration:
- Add Gradle 9.1 wrapper (supports Java 25)
- Configure buildSrc with java-conventions plugin
- Platform-specific SWT dependency selection
- Preserve Maven build for backwards compatibility

Both build systems now work:
- mvn compile (Maven)
- ./gradlew compileJava (Gradle 9.1)